Implement new Spring project architecture